# discord-jab

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  jab-commands.py  jab-simple.py  message.py  pyproject.toml  requirements.txt  settings.py  web_app.py
bot/: __main__.py  client.py  constants.py
commands/: admin.py  competition_utils.py  competitions.py  games.py  organized_crimes.py  torn.py
database/: __init__.py  db_manager.py  db_utils.py
documentation/: DATABASE_PLAN.md  DATABASE_REVIEW.md  DEPLOYMENT.md  DEPLOYMENT_PLAN.md  PORTAINER_SETUP_TROUBLESHOOTING.md  QUICK_START.md
jab/: __main__.py  constants.py
jab/cogs/: misc.py
torn_api/: __init__.py  client.py  key_manager.py
utils/: permissions.py
